# app-manager-bot

./: .env.example  .gitignore  README.md  apps.yaml  pyproject.toml
scripts/: run.sh
src/app_manager/: __init__.py  config.py  main.py
src/app_manager/apps/: __init__.py  executor.py  models.py  registry.py
src/app_manager/bot/: __init__.py  auth.py  handlers.py
src/app_manager/utils/: __init__.py  logging.py
tests/: __init__.py
